Fix image layout overflow in Istvan page

--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -451,32 +451,63 @@ ol {
 .image-track-3-type-2 {
   display: flex;
   flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 12px;
   width: 100%;
   overflow: hidden;
 
   img {
-    width: 33.33%;
-    flex-shrink: 0;
+    flex: 1;
+    max-width: calc((100% - 24px) / 3); // 3 kép, 2 db 12px gap
+    height: auto;
   }
 
   @include breakpoints.xs {
     gap: 0;
 
     img {
-      display: none; // Az összes kép elrejtése xs méretben
+      display: none;
     }
   }
 
   @include breakpoints.md {
-    flex-flow: nowrap;
     gap: 12px;
 
     img {
-      display: inline-block; // Minden kép megjelenítése md mérettől
-      width: 33.33%;
+      display: inline-block;
     }
   }
 }
+
+// .image-track-3-type-2 {
+//   display: flex;
+//   flex-direction: row;
+//   width: 100%;
+//   overflow: hidden;
+
+//   img {
+//     width: 33.33%;
+//     flex-shrink: 0;
+//   }
+
+//   @include breakpoints.xs {
+//     gap: 0;
+
+//     img {
+//       display: none; // Az összes kép elrejtése xs méretben
+//     }
+//   }
+
+//   @include breakpoints.md {
+//     flex-flow: nowrap;
+//     gap: 12px;
+
+//     img {
+//       display: inline-block; // Minden kép megjelenítése md mérettől
+//       width: 33.33%;
+//     }
+//   }
+// }
 
 .island-section {
   background-color: colors.$color-shades-darkGray;
